--- a/public/assets/css/bundle.css
+++ b/public/assets/css/bundle.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 /* VENDORS */
 
 /*!
@@ -3410,17 +3412,20 @@ input[type="search"] {
   .input-group-sm > input[type="time"].form-control,
   .input-group-sm > input[type="time"].input-group-addon,
   .input-group-sm > .input-group-btn > input[type="time"].btn,
-  .input-group-sm input[type="time"],
+  .input-group-sm
+  input[type="time"],
   input[type="datetime-local"].input-sm,
   .input-group-sm > input[type="datetime-local"].form-control,
   .input-group-sm > input[type="datetime-local"].input-group-addon,
   .input-group-sm > .input-group-btn > input[type="datetime-local"].btn,
-  .input-group-sm input[type="datetime-local"],
+  .input-group-sm
+  input[type="datetime-local"],
   input[type="month"].input-sm,
   .input-group-sm > input[type="month"].form-control,
   .input-group-sm > input[type="month"].input-group-addon,
   .input-group-sm > .input-group-btn > input[type="month"].btn,
-  .input-group-sm input[type="month"] {
+  .input-group-sm
+  input[type="month"] {
     line-height: 30px;
   }
 
@@ -3433,17 +3438,20 @@ input[type="search"] {
   .input-group-lg > input[type="time"].form-control,
   .input-group-lg > input[type="time"].input-group-addon,
   .input-group-lg > .input-group-btn > input[type="time"].btn,
-  .input-group-lg input[type="time"],
+  .input-group-lg
+  input[type="time"],
   input[type="datetime-local"].input-lg,
   .input-group-lg > input[type="datetime-local"].form-control,
   .input-group-lg > input[type="datetime-local"].input-group-addon,
   .input-group-lg > .input-group-btn > input[type="datetime-local"].btn,
-  .input-group-lg input[type="datetime-local"],
+  .input-group-lg
+  input[type="datetime-local"],
   input[type="month"].input-lg,
   .input-group-lg > input[type="month"].form-control,
   .input-group-lg > input[type="month"].input-group-addon,
   .input-group-lg > .input-group-btn > input[type="month"].btn,
-  .input-group-lg input[type="month"] {
+  .input-group-lg
+  input[type="month"] {
     line-height: 46px;
   }
 }
@@ -3505,21 +3513,24 @@ input[type="radio"].disabled,
 fieldset[disabled] input[type="radio"],
 input[type="checkbox"][disabled],
 input[type="checkbox"].disabled,
-fieldset[disabled] input[type="checkbox"] {
+fieldset[disabled]
+input[type="checkbox"] {
   cursor: not-allowed;
 }
 
 .radio-inline.disabled,
 fieldset[disabled] .radio-inline,
 .checkbox-inline.disabled,
-fieldset[disabled] .checkbox-inline {
+fieldset[disabled]
+.checkbox-inline {
   cursor: not-allowed;
 }
 
 .radio.disabled label,
 fieldset[disabled] .radio label,
 .checkbox.disabled label,
-fieldset[disabled] .checkbox label {
+fieldset[disabled]
+.checkbox label {
   cursor: not-allowed;
 }
 
@@ -5950,7 +5961,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 }
 
 .breadcrumb > li + li:before {
-  content: "/\\00a0";
+  content: "/ ";
   padding: 0 5px;
   color: #ccc;
 }
@@ -6126,7 +6137,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 
 .label {
   display: inline;
-  padding: 0.2em 0.6em 0.3em;
+  padding: .2em .6em .3em;
   font-size: 75%;
   font-weight: bold;
   line-height: 1;
@@ -7357,7 +7368,6 @@ button.close {
 
 .modal.fade .modal-dialog {
   -webkit-transform: translate(0, -25%);
-  -ms-transform: translate(0, -25%);
   transform: translate(0, -25%);
   -webkit-transition: -webkit-transform 0.3s ease-out;
   transition: transform 0.3s ease-out;
@@ -7365,7 +7375,6 @@ button.close {
 
 .modal.in .modal-dialog {
   -webkit-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
   transform: translate(0, 0);
 }
 
@@ -8338,49 +8347,4 @@ button.close {
   .hidden-print {
     display: none !important;
   }
-}
-
-/* GENERAL SETTINGS */
-
-body {
-  background-color: #121212;
-}
-
-* {
-  outline: none;
-}
-
-/* SHIFT AUDIO UI COMPONENTS*/
-
-.sha_general_input_box input {
-  position: absolute;
-  background-color: transparent;
-  color: #6ed5fe;
-  border: none;
-  border-bottom: 1px solid #656565;
-  width: 100%;
-}
-
-.sha_general_input_box label {
-  position: absolute;
-  top: 5px;
-  padding: 0;
-  margin: 0;
-  color: #656565;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.sha_general_input_box input:focus + label {
-  transform-orign: 0, 0;
-  -webkit-transform: translateY(-20px) scale(0.8);
-  -ms-transform: translateY(-20px) scale(0.8);
-  transform: translateY(-20px) scale(0.8);
-}
-
-.sha_workspaceArea {
-  margin-top: 30px;
-  padding: 20px;
-  background-color: #303030;
-  height: 650px;
 }
